# string-searching

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: benchmark-test.yaml  simulator-test.yaml  style.yaml  test.yaml
docs/: acceptance_plan.md  algorithms.md  arhcitecture.md  contributing.md  doxygen.config  report.md  requirements.md  requirements_analysis.md
include/string-searching/: aho_corasick_substring_searcher.hpp  base_substring_searcher.hpp  boyer_moore_substring_searcher.hpp  brute_force_substring_searcher.hpp  kmp_substring_searcher.hpp  naive_substring_searcher.hpp  rabin_karp_substring_searcher.hpp  shift_or_substring_searcher.hpp  suffix_array_substring_searcher.hpp  suffix_tree_substring_searcher.hpp  z_substring_searcher.hpp
lib/: BaseSubstringSearcher.hpp  NaiveSubstringSearcher.cpp
simulator/: CMakeLists.txt  run-simulator
simulator/include/: simulator.hpp
simulator/include/simulator/: algorithms_creator.hpp  argument_parser.hpp  simulator.hpp  utils.hpp
simulator/src/: algorithms_creator.cpp  argument_parser.cpp  main.cpp  simulator.cpp
simulator/tests/: CMakeLists.txt
simulator/tests/resources/test-text-1m-substring-10k-found/: substring.txt
simulator/tests/resources/test-text-1m-substring-10k-not-found/: substring.txt  text.txt
simulator/tests/resources/test-text-1m-substring-10k-not-found-anti-bf/: substring.txt
simulator/tests/resources/test-text-500k-substring-1k-found/: substring.txt
simulator/tests/resources/test-text-500k-substring-1k-not-found/: substring.txt
simulator/tests/resources/test-text-500k-substring-63-found/: substring.txt  text.txt
simulator/tests/resources/test-text-500k-substring-63-not-found/: substring.txt
simulator/tests/src/: algorithms_creator_test.cpp  argument_parser_test.cpp  simulator_benchmark_test.cpp  simulator_benchmark_test.py  simulator_test.cpp
src/: CMakeLists.txt  aho_corasick_substring_searcher.cpp  base_substring_searcher.cpp  boyer_moore_substring_searcher.cpp  brute_force_substring_searcher.cpp  kmp_substring_searcher.cpp  naive_substring_searcher.cpp  rabin_karp_substring_searcher.cpp  shift_or_substring_searcher.cpp  suffix_array_substring_searcher.cpp  suffix_tree_substring_searcher.cpp  z_substring_searcher.cpp
src/core/: AlgorithmsCreator.cpp  AlgorithmsCreator.hpp  CMakeLists.txt  Simulator.hpp  main.cpp
src/lib/: BaseSubstringSearcher.cpp  NaiveSubstringSearcher.hpp  base_substring_searcher.cpp  base_substring_searcher.hpp  naive_substring_searcher.cpp  naive_substring_searcher.hpp
src/simulator/: AlgorithmsCreator.cpp  AlgorithmsCreator.hpp  Simulator.cpp  Simulator.hpp  algorithms_creator.cpp  algorithms_creator.hpp  argument_parser.cpp  argument_parser.hpp  main.cpp  simulator.cpp  simulator.hpp  utils.hpp
src/tests/: CMakeLists.txt
src/tests/unit/: CMakeLists.txt
tests/style/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/lib/: base_substring_searcher_test.cpp  naive_substring_searcher_test.cpp
tests/unit/simulator/: algorithm_creator_test.cpp  algorithms_creator_test.cpp  argument_parser_test.cpp  simulator_test.cpp
tests/unit/src/: base_substring_searcher_test.cpp  basic_substring_test.cpp  naive_substring_searcher_test.cpp
